[workspace]
resolver = "2"
members = [
    "pkg-lib",
    "pkg-cli",
]
default-members = [
    "pkg-cli",
]

[workspace.package]
version = "0.1.0"
description = "Redox Packaging Utilities"
license = "MIT"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://gitlab.redox-os.org/redox-os/pkgutils"
edition = "2021"
