[package]
name = "pkg-gui"
description = "redox package manager GUI"

version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "pkg-gui"
path = "src/main.rs"

[dependencies]
pkg-lib = { path = "../pkg-lib" }

slint = "1.0"

[build-dependencies]
slint-build = "1.0"
