[package]
name = "redox-pkg"
description = "redox package manager library"

version.workspace = true
edition.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pkg"
doctest = false

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[dependencies]
anyhow = "1"
ignore = "0.4"
indicatif = { version = "0.17", optional = true }
pkgar = "0.1"
pkgar-core = "0.1"
pkgar-keys = "0.1"
serde = "1"
serde_derive = "1"
thiserror = "1"
toml = "0.8.2"

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["blocking", "brotli", "rustls-tls"]
